<resources>
    <string name="app_name">WalkingTourApp</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Walking Tours</string>
    <string name="show_addresses_caption">Show Addresses</string>
    <string name="show_geofences_caption">Show Geofences</string>
    <string name="show_travel_path_caption">Show Travel Path</string>
    <string name="show_tour_path_caption">Show Tour Path</string>
    <string name="show_current_address">current address displays here!</string>
</resources>