<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mapConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006948"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/map_current_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/show_current_address"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/show_travel_path_cb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <CheckBox
        android:id="@+id/show_address_cb"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:onClick="showAddressDetails"
        android:text="@string/show_addresses_caption"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/show_geofence_cb"
        app:layout_constraintEnd_toStartOf="@+id/show_travel_path_cb"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_current_address"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/show_geofence_cb"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:onClick="showGeoFenceDetails"
        android:text="@string/show_geofences_caption"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/show_tour_path_cb"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_address_cb"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/show_travel_path_cb"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:onClick="showTravelPathDetails"
        android:text="@string/show_travel_path_caption"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/show_tour_path_cb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_current_address" />

    <CheckBox
        android:id="@+id/show_tour_path_cb"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:onClick="showTourPathDetails"
        android:text="@string/show_tour_path_caption"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_travel_path_cb"
        tools:ignore="TextContrastCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>